--- a/src/app.scss
+++ b/src/app.scss
@@ -4,9 +4,11 @@
 
 body {
   margin: 0;
+  font-family: Verdana,Arial,sans-serif;
+  padding: 4px;
 }
 
-.container {
+.mycontainer {
   display: grid;
   gap: 4px;
   grid-template-areas:
@@ -33,8 +35,8 @@ body {
 }
 
 @media screen and (width >= 1200px) {
-  .container {
-    grid-template-columns: 1fr 3fr;
+  .mycontainer {
+    grid-template-columns: auto 3fr;
     grid-template-areas:
 	"header header"
 	"nav main"
