Add oceanfront and soundfront, and fix up canalfront

--- a/src/app.scss
+++ b/src/app.scss
@@ -38,7 +38,7 @@ body {
   @apply border border-red-500 border-solid;
 }
 
-hr {
+hr.orange {
   width: 75%;
   height: 6px;
   border: 1px #ff7e40 solid;
