--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,6 @@
+$headerorange: #ff7e40;
+$lightorange: #ffcc99;
+
 * {
 	box-sizing: border-box;
 }
@@ -46,13 +49,15 @@ body {
 hr.orange {
 	width: 75%;
 	height: 6px;
-	border: 1px #ff7e40 solid;
-	background: #ff7e40;
+	border: 1px $headerorange solid;
+	background: $headerorange;
 }
 
-$lightorange: #ffcc99;
 .bg-lightorange {
 	background: $lightorange;
+}
+.bg-headerorange {
+	background: $headerorange;
 }
 
 @media screen and (width >= 1200px) {
